add GoToTop button

--- a/foot.html
+++ b/foot.html
@@ -252,3 +252,14 @@
     }, 1000)
   }
 </script>
+
+
+
+<!-- user setting -->
+
+<button id="GoToTop" style="position:fixed; right:0; bottom:0;  border: none; background:none; color:#22337755"><i class="fa fa-angle-double-up fa-3x" aria-hidden="true"></i></button>
+<script>
+GoToTop.onclick = function(){
+document.body.scrollTop = document.documentElement.scrollTop = 0;
+}
+</script>
